--- a/pages/subjects/gcse-physics.html
+++ b/pages/subjects/gcse-physics.html
@@ -1717,10 +1717,10 @@
                       <div class="swiper-slide">
                         <div class="corp-testimonial">
                           <div class="corp-logo" aria-hidden="true">
-                              <img src="../../assets/logos/robin.jpg" alt="Robin profile" loading="lazy" />
+                              <img src="../../assets/logos/henry.jpg" alt="Henry profile" loading="lazy" />
                           </div>
-                          <blockquote class="corp-quote">“Professional, calm, and effective. The diagnostic lesson gave us a clear roadmap — we finally knew what to focus on.”</blockquote>
-                          <div class="corp-meta">Robin • Student</div>
+                          <blockquote class="corp-quote">“Physics was the subject I always left to last because I didn’t get it, especially electricity. Once it was explained properly though, I realised it wasn’t as scary as I thought. I actually started to get the hang of it and did way better than I expected in my GCSEs.”</blockquote>
+                          <div class="corp-meta">Henry L • Student</div>
                         </div>
                       </div>
                       <div class="swiper-slide">
