--- a/pages/subjects/gcse-english-language.html
+++ b/pages/subjects/gcse-english-language.html
@@ -1719,7 +1719,7 @@
                           <div class="corp-logo" aria-hidden="true">
                               <img src="../../assets/logos/afifa.jpg" alt="Afifa profile" loading="lazy" />
                           </div>
-                          <blockquote class="corp-quote">“Yuli really helped me with my creative writing and grammar, it's something I've always struggled with but now I can confidently say I am really good At.”</blockquote>
+                          <blockquote class="corp-quote">“Yuli really helped me with my creative writing and grammar, it's something I've always struggled with but now I can confidently say I am really good at.”</blockquote>
                           <div class="corp-meta">Afifa A • Student</div>
                         </div>
                       </div>
