--- a/pages/subjects/gcse-english-literature.html
+++ b/pages/subjects/gcse-english-literature.html
@@ -1716,10 +1716,10 @@
                       <div class="swiper-slide">
                         <div class="corp-testimonial">
                           <div class="corp-logo" aria-hidden="true">
-                              <img src="../../assets/logos/robin.jpg" alt="Robin profile" loading="lazy" />
+                              <img src="../../assets/logos/afifa.jpg" alt="Afifa profile" loading="lazy" />
                           </div>
-                          <blockquote class="corp-quote">“Professional, calm, and effective. The diagnostic lesson gave us a clear roadmap — we finally knew what to focus on.”</blockquote>
-                          <div class="corp-meta">Robin • Student</div>
+                          <blockquote class="corp-quote">“Yuli helped me realise that memorising quotes was not as important as getting the structure and understanding of the book or play we were studying. Now I can write actually considering my own perspectives as well as maintaining structure.”</blockquote>
+                          <div class="corp-meta">Afifa A • Student</div>
                         </div>
                       </div>
                       <div class="swiper-slide">
