--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
         
         <!-- KEEP: Logo (same as before) -->
         <a href="/" class="logo">Yuli<span>.</span></a>
+
+        <a href="/" class="logo">Yuli<span>.</span></a>
+<nav class="desktop-nav">
+    <a href="#subjects">Subjects</a>
+    <a href="#pricing">Pricing</a>
+    <a href="#about">About</a>
+    <a href="#contact">Contact</a>
+</nav>
         
         <!-- KEEP: Auth Actions (same as before) -->
         <div class="auth-actions">
