--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="profile.css?v=2">
+    <link rel="stylesheet" href="mobile.css">
     <style>
       /* Password toggle styles for auth modal */
       .pw-wrap { position: relative; }
@@ -2222,6 +2223,7 @@ document.addEventListener('keydown', function(e) {
     }
 });
 </script>
+    <script src="mobile.js"></script>
     <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>68d02c2d0f482854b717add8,68d02b3c2f2c944ce27d507f</script>
 </body>
 </html>
