--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="profile.css?v=2">
+    <link rel="stylesheet" href="mobile-fix.css">
     <style>
       /* Password toggle styles for auth modal */
       .pw-wrap { position: relative; }
