--- a/index.html
+++ b/index.html
@@ -2222,9 +2222,14 @@ document.addEventListener('keydown', function(e) {
         closeBookingGuide();
     }
 });
+<script 
+  id="messenger-widget-b" 
+  src="https://cdn.botpenguin.com/website-bot.js"
+  data-bot-id="68d02c2d0f482854b717add8,68d02b3c2f2c944ce27d507f" 
+  defer>
 </script>
-    <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>68d02c2d0f482854b717add8,68d02b3c2f2c944ce27d507f</script>
-    <script>
+
+<script>
   window.addEventListener("load", function () {
     // Wait a moment to let BotPenguin load
     setTimeout(() => {
@@ -2237,7 +2242,7 @@ document.addEventListener('keydown', function(e) {
       const observer = new MutationObserver(() => {
         const iframe = document.querySelector("iframe[src*='botpenguin']");
         if (iframe && iframe.style.display === "block") {
-          iframe.style.display = "none"; // force hidden until manually opened
+          iframe.style.display = "none"; // Force hidden until manually opened
         }
       });
       observer.observe(document.body, { childList: true, subtree: true });
@@ -2246,3 +2251,4 @@ document.addEventListener('keydown', function(e) {
 </script>
 </body>
 </html>
+
