--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-GB" class="app-loading">
 <head>
     <meta charset="UTF-8">
-   <meta name="viewport" content="width=1024, user-scalable=yes">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yuli. | Expert GCSE & A-Level Tutoring</title>
     <base href="/">
     <!-- Firebase SDKs -->
