--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="profile.css?v=2">
     <link rel="stylesheet" href="mobile-fix.css">
+    <link rel="stylesheet" href="mobile.css">
     <style>
       /* Password toggle styles for auth modal */
       .pw-wrap { position: relative; }
