--- a/index.html
+++ b/index.html
@@ -2224,5 +2224,20 @@ document.addEventListener('keydown', function(e) {
 });
 </script>
     <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>68d02c2d0f482854b717add8,68d02b3c2f2c944ce27d507f</script>
+    <script>
+if (window.innerWidth <= 768) {
+    document.addEventListener('DOMContentLoaded', function() {
+        const header = document.querySelector('header .container');
+        const nav = document.querySelector('nav');
+        const menuBtn = document.createElement('button');
+        menuBtn.className = 'mobile-menu-toggle';
+        menuBtn.innerHTML = '<span></span><span></span><span></span>';
+        header.insertBefore(menuBtn, header.firstChild);
+        menuBtn.onclick = () => nav.classList.toggle('active');
+        const links = nav.querySelectorAll('a');
+        links.forEach(link => link.onclick = () => nav.classList.remove('active'));
+    });
+}
+</script>
     </body>
 </html>
