--- a/index.html
+++ b/index.html
@@ -351,11 +351,12 @@
       <div class="auth-card auth-card--minimal">
         <button id="auth-close" class="auth-close" aria-label="Close"><i class="fas fa-times"></i></button>
         <div class="auth-header-integrated">
-          <div class="auth-brand-section">
-            <div class="auth-logo">Yuli<span class="logo-accent">.</span></div>
-            <h2 id="auth-title">Sign in to continue</h2>
-          </div>
-        </div>
+  <button id="auth-close" class="auth-close" aria-label="Close"><i class="fas fa-times"></i></button>
+  <div class="auth-brand-section">
+    <div class="auth-logo">Yuli<span class="logo-accent">.</span></div>
+    <h2 id="auth-title">Sign in to continue</h2>
+  </div>
+</div>
         <form id="auth-form">
           <label class="muted" for="auth-email">Email</label>
           <input id="auth-email" class="auth-input" type="email" autocomplete="email" required />
